27 August 2021: Wouter
	- Fix #533: Negative responses get cached even when setting
	  cache-max-negative-ttl: 1

25 August 2021: Wouter
	- Merge #401: RPZ triggers. This add additional RPZ triggers,
	  unbound supports a full set of rpz triggers, and this now
	  includes nsdname, nsip and clientip triggers. Also actions
	  are fully supported, and this now includes the tcp-only action.
	- Fix #536: error: RPZ: name of record (drop.spamhaus.org.rpz.local.)
	  to insert into RPZ.
	- Fix the stream wait stream_wait_count_lock and http2 buffer locks
	  setup and desetup from race condition.
	- Fix RPZ locks. Do not unlock zones lock if requested and rpz find
	  zone does not find the zone. Readlock the clientip that is found
	  for ipbased triggers. Unlock the nsdname zone lock when done.
	  Unlock zone and ip in rpz nsip and nsdname callback. Unlock
	  authzone and localzone if clientip found in rpz worker call.
	- Fix compile warning in libunbound for listen desetup routine.
	- Fix asynclook unit test for setup of lockchecks before log.

20 August 2021: Wouter
	- Fix #529: Fix: log_assert does nothing if UNBOUND_DEBUG is
	  undefined.
	- Fix #531: Fix: passed to proc after free.

17 August 2021: Wouter
	- Fix that --with-ssl can use "/usr/include/openssl11" to pass the
	  location of a different openssl version.
	- Fix #527: not sending quad9 cert to syslog (and may be more).
	- Fix sed script in ssldir split handling.

16 August 2021: George
	- Merge PR #528 from fobser: Make sldns_str2wire_svcparam_buf()
	  static.

16 August 2021: Wouter
	- Fix to support harden-algo-downgrade for ZONEMD dnssec checks.

13 August 2021: Wouter
	- Support using system-wide crypto policies.
	- Fix for #431: Squelch permission denied errors for udp connect,
	  and udp send, they are visible at higher verbosity settings.
	- Fix zonemd verification of key that is not in DNS but in the zone
	  and needs a chain of trust.
	- zonemd, fix order of bogus printout string manipulation.
